[project]
name = "agent-llm-edit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "openai>=1.76.0",
    "openai-agents>=0.0.12",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]
